--- a/EdacProject-springboot-backend/src/main/resources/application.properties
+++ b/EdacProject-springboot-backend/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 #context path default value : empty
 #server.servlet.context-path=/
 #DB properties
-spring.datasource.url=jdbc:mysql://localhost:3306/Educate_Now?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/Educate_Now?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=04912
 # JPA properties
